# mc

./: .clang-format  CMakeLists.txt  README.md  ltl.txt  ts.txt
include/: ast.h  bitset.h  lexer.h  nba.h  parser.h  prod.h  ts.h
src/: ast.cpp  lexer.cpp  main.cpp  nba.cpp  parser.cpp  prod.cpp  ts.cpp
